--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1182,7 +1182,7 @@ table a {
 .chiko {
     font-family: 'Rubik Dirt', cursive;
     text-align: center;
-    font-size: 70px;
+    font-size: 50px;
     margin-top: 70px;
     color: #ffffff;
     text-shadow: 0px 0px 20px #03e9f4;
@@ -1208,7 +1208,7 @@ table a {
   
   .text-container {
     font-family: 'Rubik Dirt', cursive;
-    font-size: 180px;
+    font-size: 200px;
     text-transform: uppercase;
     text-align: center; /* center the text */
     margin: auto; /* center the text horizontally */
@@ -1222,7 +1222,7 @@ table a {
   @keyframes glow {
     0%, 100% {
       color: #FFF;
-      text-shadow: 0 0 10px #0652DD, 0 0 50px #0652DD, 0 0 100px #0652DD;
+      text-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4;
     }
   
     10%, 90% {
