--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1001,7 +1001,7 @@ table a {
   background-color: #1a1d20;
   margin: 15% auto; /* 15% fro1m the top and centered */
   padding: 40px;
-  border: 3px solid blue;
+  border: 3px solid #03e9f4;
   width: 40%;
   margin-top: calc(25% - 44px);
 }
